feat: Implement origin pull CDN with cache

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "type": "project",
     "require": {
         "php": "^7.4|^8.0",
-        "doctrine/cache": "^1.10"
+        "ext-fileinfo": "*",
+        "doctrine/cache": "^1.10",
+        "guzzlehttp/guzzle": "^7.2",
+        "symfony/http-foundation": "^5.2"
     },
     "autoload": {
         "psr-4": {
